# FFGLPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  mediadefs.hpp
src/demuxer/: demuxer.cpp  demuxer.hpp
src/utils/: logger.cpp  logger.hpp
tests/: CMakeLists.txt
tests/demuxer/: CMakeLists.txt  test_demuxer.cpp
tests/utils/: CMakeLists.txt  debug_test.cpp  test_logger.cpp
